--- a/JKD/CenterView/DrugUserControl.resx
+++ b/JKD/CenterView/DrugUserControl.resx
@@ -215,4 +215,7 @@
         Ly5VZm4tDLTfAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="behaviorManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
